test/subjects/errors/array_as_class_constant.php
<?php
	// For some reason, arrays are not allowed as class constants

	class C
	{
		const X = array();	// {Fatal error: Arrays are not allowed in class constants}
	}
?>
